# moco

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  COMPLETED_SLASH_COMMANDS.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  README_ja.md  SECURITY.md  docker-compose.yml  mkdocs.yml  package-lock.json  package.json  pyproject.toml  test_security.py  test_toolcall.py
.code_index/: code.index  metadata.pkl
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
.moco/commands/: explain.md  refactor.md  review.md  test.md
alpaca/: final_spec.md  spec.md  spec_final.md  spec_new.md  specification.md  specification_final.md  specification_final_v3.md  specification_v2.md  specification_v3.md  specification_v4.md  temp_README_SPEC.md  temp_final_spec.md  temp_spec.md  temp_spec_final_v2.md  temp_spec_v3.md  temp_spec_v4.md  temp_v5.md  temp_v6.md  temp_v7.md
docs/: COMPARISON_AND_UI_IMPROVEMENTS.md  SYSTEM_COMPARISON.md  core.md  custom-tools.md  getting-started.md  index.md  profiles.md  tools.md
examples/default/: profile.yaml
examples/default/agents/: orchestrator.md
src/moco/: __init__.py  cancellation.py  cli.py  cli_commands.py  exceptions.py
src/moco/adapters/: base.py  line_adapter.py  telegram_adapter.py
src/moco/common/: errors.py  schemas.py
src/moco/core/: __init__.py  checkpoint.py  context_compressor.py  cost_tracker.py  guardrails.py  llm_provider.py  mcp_client.py  mcp_server.py  orchestrator.py  runtime.py  runtime.py_backup  scheduler.py  task_runner.py  telemetry.py  token_cache.py
src/moco/dashboard/: __init__.py  app.py
src/moco/gateway/: media_processor.py  rate_limiter.py  server.py
src/moco/memory/: __init__.py  db.py  embeddings.py  graph.py  serialization.py  service.py  similarity.py
src/moco/storage/: __init__.py  checkpoint_store.py  scheduled_task_store.py  semantic_memory.py  session_logger.py  (+2 more)
tests/: test_chat_workdir.py  test_checkpoint_store.py  test_cli_commands.py  test_git_tools.py  test_patch_viewer.py  test_runtime.py  test_sandbox.py  test_token_cache.py  test_usage_store.py
vscode-extension/: .vscodeignore  README.md  package.json
vscode-extension/src/: extension.ts
(+150 files in other folders)
